# runescape-smart-item-search

./: .dockerignore  .gitignore  README.md  deploy.ps1  deploy.sh  docker-compose.prod.yml  docker-compose.yml  nixpacks.toml  railway.json  render.yaml
backend/: .coveragerc  .dockerignore  .flake8  Dockerfile  Dockerfile.local  Makefile  TROUBLESHOOTING_TESTS.md  __init__.py  database.py  embeddings.py  env.example  init_database.py  main.py  migrate_embedding_dimension.py  models.py  nixpacks.toml  polling_service.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  sample_data.py  schemas.py  setup.py
backend/tests/: README.md  TESTING.md  TEST_CASES_SUMMARY.md  TEST_CREATION_SUMMARY.md  __init__.py  conftest.py  test_database.py  test_embeddings.py  test_init_database.py  test_main.py  test_models.py  test_polling_service.py  test_sample_data.py  test_schemas.py
documentation/: API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  DEPLOYMENT.md  EMBEDDING_VECTOR_STORE_DIAGRAM.md  METHOD_FLOW_DIAGRAM.md  QUICK_DEPLOY.md  SETUP.md  embedding_vector_store_diagram.mmd  embedding_vector_store_overview.mmd
mobile/: .gitignore  App.tsx  README.md  SearchScreen.example.tsx  apiClient.ts  index.js  package.json  tsconfig.json
web/: README.md  index.html  package-lock.json  package.json
web/src/: App.css  App.tsx  apiClient.ts  vite-env.d.ts
web/src/components/: ItemDetail.css  ItemDetail.tsx  SearchScreen.css  SearchScreen.tsx
